# chemcards

./: .gitignore  README.md  ideas.md  pyproject.toml
chemcards/: README.md  chemcards.py  cli.py
chemcards/database/: cheminformatics.py  core.py  resources.py
chemcards/database/data/: functional_groups.yaml  manually_added_molecules.yaml
chemcards/database/services/: chembl.py  chembl_query.json  drugbank.py
chemcards/flashcards/: core.py  filters.py  multiplechoice.py
chemcards/gui/: core.py  mainwindow.py  molecules.py  quizwindow.py
chemcards/scripts/: README.md  generate_catalog.py
devtools/: environment.yaml  view_tkinter_fonts.py
devtools/tests/: chembl_download.ipynb  rdkit_viz.ipynb  smarts_quiz.ipynb  test_database.py  test_gui.py  test_local_resources.py  test_multiplechoice_fg.py  test_services.py
